Updated favicon and frontend changes